Change Project Div to Section
change the project div to section on home

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			<div>
 				<h3>Selected Projects</h3>	
 			</div>
-			<div> <!--Open Row that contains 2 columns x 2 rows -->
+			<section> <!--Open Row that contains 2 columns x 2 rows -->
 				<div><!--Open Projects Row 1-->
 					<div class="project prj-1"><!--Open Project 1-->
 							<a href="../portfolio/linsenpate.html">
@@ -125,7 +125,7 @@
 						</div><!--end Project Content 4-->	
 					</div><!--end Project 4-->
 				</div><!--End Projects Row 1-->
-			</div><!--End Row that contains 2 columns x 2 rows -->
+			</section><!--End Row that contains 2 columns x 2 rows -->
 		</div><!--end work-->
 		<!-- About -->
 		<div class="container-about" id="about">
