Revert "Change Title"
This reverts commit c6d74f55835d9895987ef3917fbce72c4428ab9c.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Júlia Marí Bernaus">
 	<link href="../portfolio/img/favicon.ico" rel="shortcut icon">
-    <title>Júlia Marí Bernaus | About Test</title>
+    <title>Júlia Marí Bernaus | About</title>
 
 	<!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
