Create Linsenpate Portfolio Page

--- a/setting.html
+++ b/setting.html
@@ -47,7 +47,7 @@
 
     <!-- Hero -->
     <main>
-        <section class="intro">
+        <section><!--Open Intro-->
             <div><!--Open Right Column-->
                 <div><!--Open Text on Right Column-->
                     <p>In Summer 2020, Setting, one of the leading office marketplace for startups, scaleups, and innovators in Berlin
@@ -157,8 +157,8 @@
                 <h3>Desktop Prototype</h3>
                 <p>Click on the blue areas to navigate through the prototype</p>
             </div>
-            <div>
-                <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450"
+            <div><!--Open Desktop iFrame-->
+                <iframe style="border: none;" width="1000" height="800"
                     src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FOoYnOXz8ZH1D3ErkTkL78J%2FSetting-Prototype-UI%3Fnode-id%3D753%253A681%26viewport%3D442%252C446%252C0.020680343732237816%26scaling%3Dscale-down%26page-id%3D753%253A1"
                     allowfullscreen>
                 </iframe>
@@ -169,13 +169,13 @@
                 <h3>Design System</h3>
                 <p>Use your right and left keyboard arrows to navigate through the Design System</p>
             </div>
-            <div>
-            <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450"
+            <div><!--Open Design System iFrame-->
+            <iframe style="border: none;" width="1000" height="800"
                 src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FOoYnOXz8ZH1D3ErkTkL78J%2FSetting-Prototype-UI%3Fnode-id%3D2366%253A3%26viewport%3D44%252C462%252C0.016561182215809822%26scaling%3Dcontain%26page-id%3D1997%253A3897"
                 allowfullscreen>
             </iframe>
             </div>
-        </section>
+        </section><!--End of Design System Prototype-->
     </main>
 
     <!-- Footer  -->
