Debugging Setting's Portfolio Page

--- a/setting.html
+++ b/setting.html
@@ -49,6 +49,7 @@
     <main>
         <section><!--Open Intro-->
             <div><!--Open Right Column-->
+                <h2>Setting</h2>
                 <div><!--Open Text on Right Column-->
                     <p>In Summer 2020, Setting, one of the leading office marketplace for startups, scaleups, and innovators in Berlin
                     contacted me to redesign their website.<br>
@@ -106,13 +107,11 @@
         </picture><!--End Hero Image-->
         <section><!--Open Project Description-->
             <div><!--Open Left Column-->
-                <ul>
-                    <li>
-                        <h3>About Setting</h3>
-                        <p>Setting HQ is the leading office marketplace for startups, scaleups, and innovators. From world-renowned brands to local
-                        businesses, their mission is to identify a space that perfectly matches the company’s unique personality and
-                        culture—creating a custom solution for the team.</p>
-                    </li>
+                <h3>About Setting</h3>
+                <p>Setting HQ is the leading office marketplace for startups, scaleups, and innovators. From world-renowned brands to local
+                businesses, their mission is to identify a space that perfectly matches the company’s unique personality and
+                culture—creating a custom solution for the team.</p>
+                <div>   
                     <ul>
                         <li>
                             <h3>My Role</h3>
@@ -124,14 +123,16 @@
                             Photoshop</p>
                         </li>
                     </ul>
-                    <li>
-                        <h3>Goal</h3>
-                        <p>To redesign seeting.io in order to:</p>
-                        <li>Explain the new products and create new and better leads.</li>
-                        <li>Communicate the mission, vision, values and company culture to attract suitable candidates.</li>
-                        <li>Create an aesthetic website to transmit trust and the company’s maturity.</li>
-                    </li>
-                </ul>
+                </div>
+                <div>
+                    <h3>Goal</h3>
+                    <p>To redesign seeting.io in order to:</p>
+                    <ul>
+                    <li>Explain the new products and create new and better leads.</li>
+                    <li>Communicate the mission, vision, values and company culture to attract suitable candidates.</li>
+                    <li>Create an aesthetic website to transmit trust and the company’s maturity.</li>
+                    </ul>
+                </div>
             </div><!--End Left Column-->
             <div><!--Open Right Column-->
             <h3>The Process</h3>
