Correct links on index

--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Júlia Marí Bernaus">
-	<link href="../portfolio/img/favicon.ico" rel="shortcut icon">
+	<link href="img/favicon.ico" rel="shortcut icon">
     <title>Júlia Marí Bernaus | About</title>
 
 	<!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
 	
 	<!-- Custom styles for this template go here -->
-	<link rel="stylesheet" href="../portfolio/css/normalize.css#">
-	<link rel="stylesheet" href="../portfolio/css/styles.css">
+	<link rel="stylesheet" href="/css/normalize.css">
+	<link rel="stylesheet" href="/css/styles.css">
 
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 	<!--[if lt IE 9]>
@@ -26,12 +26,12 @@
     	<!-- Header/Navigation -->
 	<header> 
 		<div class="main-nav">
-			<a class="logo" href="../portfolio/index.html">Júlia Mari Bernaus</a>
+			<a class="logo" href="/index.html">Júlia Mari Bernaus</a>
 			<nav>
 				<ul>
-					<li><a class="top-nav" href="../portfolio/index.html#work">Work</a></li>
-					<li><a class="top-nav" href="../portfolio/index.html#about">About</a></li>
-					<li><a class="top-nav" href="../portfolio/index.html#contact">Contact</a></li>
+					<li><a class="top-nav" href="/index.html#work">Work</a></li>
+					<li><a class="top-nav" href="/index.html#about">About</a></li>
+					<li><a class="top-nav" href="/index.html#contact">Contact</a></li>
 					<li><a class="top-nav" href="https://www.linkedin.com/in/juliamaribernaus/" target="_blank">LinkedIn</a></li>
 					<li><a class="btn-nav btn-outline-secondary" href="mailto:hi@juliamaribernaus.com" target="_blank" role="button">Get in touch</a></li>
 				</ul>
@@ -43,7 +43,7 @@
 	<main>
 		<div class="container-hero"> <!--Open row that holds 2 columns-->
 			<picture class="pic-hero"><!--Open Column Right -->
-				<source srcset="../portfolio/img/home/juliamaribernaus.png" media="(max-width:767px)"><img src="../portfolio/img/home/juliamaribernaus.png" alt="Júlia Marí Bernaus">
+				<source srcset="img/home/juliamaribernaus.png" media="(max-width:767px)"><img src="img/home/juliamaribernaus.png" alt="Júlia Marí Bernaus">
 			</picture><!--end pic-->
 			<div class="intro-hero"><!--Open Column Left -->
 				<h1>Hi! I am <span style="color: #FFA7A7">Júlia</span>, a Berlin based <span style="color: #0C0093;">UX/UI Designer</span> and former CEO at <span style="color: #FEED50"><a href="https://www.artconnect.com" target="_blank"></a>Artconnect</span>.</h1>
@@ -57,7 +57,7 @@
 			<div>
 				<h3>Selected Projects</h3>	
 			</div>
-			<div> <!--Open Row that contains 2 columns x 2 rows -->
+			<section> <!--Open Row that contains 2 columns x 2 rows -->
 				<div><!--Open Projects Row 1-->
 					<div class="project prj-1"><!--Open Project 1-->
 							<a href="../portfolio/linsenpate.html">
@@ -84,7 +84,7 @@
 								</picture>	
 							</a>				
 							<div class="project-content"> <!--open Project Content 2-->
-								<a href="../portfolio/setting.html">
+								<a href="/setting.html">
 									<h2>Setting</h2>
 									<h4>Setting is a Marketplace for offices in Berlin.</h4>
 									<label-big>2020-2021</label-big><p class="label-role">UX/UI Designer</p>
@@ -94,14 +94,14 @@
 				</div><!--End Projects Row 1-->
 				<div> <!--Open Projects Row 2-->
 					<div class="project prj-3"> <!--Open Project 3-->
-						<a href="../portfolio/shore.html">
+						<a href="/shore.html">
 							<picture>
 								<source srcset="img/home/shore_328x242.png" media="(max-width:767px)">
 								<img src="img/home/shore_640x471.png" alt="Linsenpate">
 							</picture>
 						</a>
 						<div class="project-content"><!--open Project Content 3-->
-							<a href="../portfolio/shore.html">	
+							<a href="/shore.html">	
 								<h2>Shore</h2>
 								<h4>App case study for non-professional watersports aficionados.</h4>
 								<label-big>2020</label-big><p class="label-role">UX/UI Designer</p>
@@ -110,14 +110,14 @@
 					</div><!--end Project 3--> 
 
 					<div class="project prj-4"><!--Open Project 4-->
-						<a href="../portfolio/shore.html">
+						<a href="/shore.html">
 							<picture>
 								<source srcset="img/home/artconnect_328x242.png" media="(max-width:767px)">
 								<img src="img/home/artconnect_640x471.png" alt="Linsenpate">
 							</picture>
 						</a>
 						<div class="project-content">
-							<a href="../portfolio/shore.html">
+							<a href="/shore.html">
 								<h2>Artconnect</h2>
 								<h4>Artconnect is a global social network for creatives.</h4>
 								<label-big>2011-2020</label-big><p class="label-role">Founder, Product Manager, UX/UI Design</p>
@@ -125,7 +125,7 @@
 						</div><!--end Project Content 4-->	
 					</div><!--end Project 4-->
 				</div><!--End Projects Row 1-->
-			</div><!--End Row that contains 2 columns x 2 rows -->
+			</section><!--End Row that contains 2 columns x 2 rows -->
 		</div><!--end work-->
 		<!-- About -->
 		<div class="container-about" id="about">
@@ -144,7 +144,7 @@
 					Design+Friends, a monthly Berlin Designer meetup.
 				</p><!--end paragraph-->
 			<div>
-				<a class="btn btn-primary about-button" href="../portfolio/about.html" role="button">Learn more about me</a>
+				<a class="btn btn-primary about-button" href="/about.html" role="button">Learn more about me</a>
 			</div>
 			</div>
 		</div><!--end home-about-->
