Change links in Setting and Linsenpate page

--- a/index.html
+++ b/index.html
@@ -1,188 +1,240 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Júlia Marí Bernaus">
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="author" content="Júlia Marí Bernaus">
 	<link href="img/favicon.ico" rel="shortcut icon">
-    <title>Júlia Marí Bernaus | About</title>
+	<title>Júlia Marí Bernaus | About</title>
 
 	<!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
-	
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
+		integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+
 	<!-- Custom styles for this template go here -->
-	<link rel="stylesheet" href="/css/normalize.css">
-	<link rel="stylesheet" href="/css/styles.css">
+	<link rel="stylesheet" href="css/normalize.css#">
+	<link rel="stylesheet" href="css/styles.css">
 
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 	<!--[if lt IE 9]>
 			<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 			<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 		<![endif]-->
-		
+
 </head>
+
 <body>
-    	<!-- Header/Navigation -->
-	<header> 
+	<!-- Header/Navigation -->
+	<header>
 		<div class="main-nav">
-			<a class="logo" href="/index.html">Júlia Mari Bernaus</a>
+			<a class="logo" href="index.html">Júlia Mari Bernaus</a>
 			<nav>
 				<ul>
-					<li><a class="top-nav" href="/index.html#work">Work</a></li>
-					<li><a class="top-nav" href="/index.html#about">About</a></li>
-					<li><a class="top-nav" href="/index.html#contact">Contact</a></li>
-					<li><a class="top-nav" href="https://www.linkedin.com/in/juliamaribernaus/" target="_blank">LinkedIn</a></li>
-					<li><a class="btn-nav btn-outline-secondary" href="mailto:hi@juliamaribernaus.com" target="_blank" role="button">Get in touch</a></li>
+					<li><a class="top-nav" href="index.html#work">Work</a></li>
+					<li><a class="top-nav" href="index.html#about">About</a></li>
+					<li><a class="top-nav" href="index.html#contact">Contact</a></li>
+					<li><a class="top-nav" href="https://www.linkedin.com/in/juliamaribernaus/"
+							target="_blank">LinkedIn</a></li>
+					<li><a class="btn-nav btn-outline-secondary" href="mailto:hi@juliamaribernaus.com" target="_blank"
+							role="button">Get in touch</a></li>
 				</ul>
 			</nav>
-		</div><!--end header-->
+		</div>
+		<!--end header-->
 	</header>
 
 	<!-- Hero -->
 	<main>
-		<div class="container-hero"> <!--Open row that holds 2 columns-->
-			<picture class="pic-hero"><!--Open Column Right -->
-				<source srcset="img/home/juliamaribernaus.png" media="(max-width:767px)"><img src="img/home/juliamaribernaus.png" alt="Júlia Marí Bernaus">
-			</picture><!--end pic-->
-			<div class="intro-hero"><!--Open Column Left -->
-				<h1>Hi! I am <span style="color: #FFA7A7">Júlia</span>, a Berlin based <span style="color: #0C0093;">UX/UI Designer</span> and former CEO at <span style="color: #FEED50"><a href="https://www.artconnect.com" target="_blank"></a>Artconnect</span>.</h1>
-			<a class="btn btn-primary" href="#work" role="button">Check my work</a>
-			</div> <!--end intro-->
-		</div><!--end home-hero-->
+		<div class="container-hero">
+			<!--Open row that holds 2 columns-->
+			<picture class="pic-hero">
+				<!--Open Column Right -->
+				<source srcset="img/home/juliamaribernaus.png" media="(max-width:767px)"><img
+					src="img/home/juliamaribernaus.png" alt="Júlia Marí Bernaus">
+			</picture>
+			<!--end pic-->
+			<div class="intro-hero">
+				<!--Open Column Left -->
+				<h1>Hi! I am <span style="color: #FFA7A7">Júlia</span>, a Berlin based <span
+						style="color: #0C0093;">UX/UI Designer</span> and former CEO at <span style="color: #FEED50"><a
+							href="https://www.artconnect.com" target="_blank"></a>Artconnect</span>.</h1>
+				<a class="btn btn-primary" href="#work" role="button">Check my work</a>
+			</div>
+			<!--end intro-->
+		</div>
+		<!--end home-hero-->
 
 
-	<!-- Projects -->
+		<!-- Projects -->
 		<div class="container-work" id="work">
 			<div>
-				<h3>Selected Projects</h3>	
+				<h3>Selected Projects</h3>
 			</div>
-			<section> <!--Open Row that contains 2 columns x 2 rows -->
-				<div><!--Open Projects Row 1-->
-					<div class="project prj-1"><!--Open Project 1-->
-							<a href="../portfolio/linsenpate.html">
-								<picture>
-									<source srcset="img/home/linsenpate_328x242.png" media="(max-width:767px)">
-									<img src="img/home/linsenpate_640x471.png" alt="Linsenpate">
-								</picture>
+			<div>
+				<!--Open Row that contains 2 columns x 2 rows -->
+				<div>
+					<!--Open Projects Row 1-->
+					<div class="project prj-1">
+						<!--Open Project 1-->
+						<a href="linsenpate.html">
+							<picture>
+								<source srcset="img/home/linsenpate_328x242.png" media="(max-width:767px)">
+								<img src="img/home/linsenpate_640x471.png" alt="Linsenpate">
+							</picture>
+						</a>
+						<div class="project-content">
+							<!--open Project Content 1-->
+							<a href="linsenpate.html">
+								<h2>Der Linsenpate</h2>
+								<h4>MisterSpex’s spin-off contactlenses e-commerce shop.</h4>
+								<label-big>2021</label-big>
+								<p class="label-role">UI Designer</p>
 							</a>
-							<div class="project-content"><!--open Project Content 1-->
-								<a href="../portfolio/linsenpate.html">
-									<h2>Der Linsenpate</h2>
-									<h4>MisterSpex’s spin-off contactlenses e-commerce shop.</h4>
-									<label-big>2021</label-big><p class="label-role">UI Designer</p>
-							</a>
-						</div><!--end Project Content-->
-					</div><!--end Project 1-->
-					
+						</div>
+						<!--end Project Content-->
+					</div>
+					<!--end Project 1-->
 
-						<div class="project prj-2"><!--Open Project 2-->
-							<a href="../portfolio/setting.html" target="_self">
-								<picture>
-									<source srcset="img/home/setting_328x242.png" media="(max-width:767px)">
-									<img src="img/home/setting_640x471.png" alt="Linsenpate">
-								</picture>	
-							</a>				
-							<div class="project-content"> <!--open Project Content 2-->
-								<a href="/setting.html">
-									<h2>Setting</h2>
-									<h4>Setting is a Marketplace for offices in Berlin.</h4>
-									<label-big>2020-2021</label-big><p class="label-role">UX/UI Designer</p>
-								</a>
-							</div><!--end Project Content 2-->
-						</div><!--end Project 2-->		
-				</div><!--End Projects Row 1-->
-				<div> <!--Open Projects Row 2-->
-					<div class="project prj-3"> <!--Open Project 3-->
-						<a href="/shore.html">
+
+					<div class="project prj-2">
+						<!--Open Project 2-->
+						<a href="setting.html" target="_self">
+							<picture>
+								<source srcset="img/home/setting_328x242.png" media="(max-width:767px)">
+								<img src="img/home/setting_640x471.png" alt="Linsenpate">
+							</picture>
+						</a>
+						<div class="project-content">
+							<!--open Project Content 2-->
+							<a href="setting.html">
+								<h2>Setting</h2>
+								<h4>Setting is a Marketplace for offices in Berlin.</h4>
+								<label-big>2020-2021</label-big>
+								<p class="label-role">UX/UI Designer</p>
+							</a>
+						</div>
+						<!--end Project Content 2-->
+					</div>
+					<!--end Project 2-->
+				</div>
+				<!--End Projects Row 1-->
+				<div>
+					<!--Open Projects Row 2-->
+					<div class="project prj-3">
+						<!--Open Project 3-->
+						<a href="shore.html">
 							<picture>
 								<source srcset="img/home/shore_328x242.png" media="(max-width:767px)">
 								<img src="img/home/shore_640x471.png" alt="Linsenpate">
 							</picture>
 						</a>
-						<div class="project-content"><!--open Project Content 3-->
-							<a href="/shore.html">	
+						<div class="project-content">
+							<!--open Project Content 3-->
+							<a href="shore.html">
 								<h2>Shore</h2>
 								<h4>App case study for non-professional watersports aficionados.</h4>
-								<label-big>2020</label-big><p class="label-role">UX/UI Designer</p>
+								<label-big>2020</label-big>
+								<p class="label-role">UX/UI Designer</p>
 							</a>
-						</div><!--end Project Content 3-->
-					</div><!--end Project 3--> 
+						</div>
+						<!--end Project Content 3-->
+					</div>
+					<!--end Project 3-->
 
-					<div class="project prj-4"><!--Open Project 4-->
-						<a href="/shore.html">
+					<div class="project prj-4">
+						<!--Open Project 4-->
+						<a href="shore.html">
 							<picture>
 								<source srcset="img/home/artconnect_328x242.png" media="(max-width:767px)">
 								<img src="img/home/artconnect_640x471.png" alt="Linsenpate">
 							</picture>
 						</a>
 						<div class="project-content">
-							<a href="/shore.html">
+							<a href="shore.html">
 								<h2>Artconnect</h2>
 								<h4>Artconnect is a global social network for creatives.</h4>
-								<label-big>2011-2020</label-big><p class="label-role">Founder, Product Manager, UX/UI Design</p>
+								<label-big>2011-2020</label-big>
+								<p class="label-role">Founder, Product Manager, UX/UI Design</p>
 							</a>
-						</div><!--end Project Content 4-->	
-					</div><!--end Project 4-->
-				</div><!--End Projects Row 1-->
-			</section><!--End Row that contains 2 columns x 2 rows -->
-		</div><!--end work-->
+						</div>
+						<!--end Project Content 4-->
+					</div>
+					<!--end Project 4-->
+				</div>
+				<!--End Projects Row 1-->
+			</div>
+			<!--End Row that contains 2 columns x 2 rows -->
+		</div>
+		<!--end work-->
 		<!-- About -->
 		<div class="container-about" id="about">
 			<div>
 				<h3>About</h3>
 			</div>
 			<div>
-				<p><!--open paragraph-->
-					I am a Berlin-based UX/UI Developer and former founder of Artconnect.com, the largest online creative community in
-					Berlin with 35k monthly active users. In 2020, I sold my venture and embarked on my true passion: UX, UI Design and
+				<p>
+					<!--open paragraph-->
+					I am a Berlin-based UX/UI Developer and former founder of Artconnect.com, the largest online
+					creative community in
+					Berlin with 35k monthly active users. In 2020, I sold my venture and embarked on my true passion:
+					UX, UI Design and
 					Front-end development.
-				</p><!--end paragraph-->
-				<p><!--open paragraph-->
-					I am currently working as a UX Design tutor at CareerFoundry and freelancing for companies such as Mister Spex,
-					Setting.io, Duxer (Ikea, Userzoom), and creating a product from scratch with KEA. On the side, I organize
+				</p>
+				<!--end paragraph-->
+				<p>
+					<!--open paragraph-->
+					I am currently working as a UX Design tutor at CareerFoundry and freelancing for companies such as
+					Mister Spex,
+					Setting.io, Duxer (Ikea, Userzoom), and creating a product from scratch with KEA. On the side, I
+					organize
 					Design+Friends, a monthly Berlin Designer meetup.
-				</p><!--end paragraph-->
-			<div>
-				<a class="btn btn-primary about-button" href="/about.html" role="button">Learn more about me</a>
+				</p>
+				<!--end paragraph-->
+				<div>
+					<a class="btn btn-primary about-button" href="about.html" role="button">Learn more about me</a>
+				</div>
 			</div>
+		</div>
+		<!--end home-about-->
+	</main>
+
+	<!-- Footer  -->
+	<footer>
+
+		<!--Contact-->
+		<div class="container-contact" id="contact">
+			<div class="contact-wrapper">
+				<h3>Did you like my work?</h3>
+				<div class="contact-buttons-table">
+					<ul id="contact-buttons-list">
+						<li><a class="btn btn-primary contact-button" href="mailto:hi@juliamaribernaus.com"
+								target="_blank" role="button">Shoot me an email</a></li>
+						<li><a class="btn btn-secondary contact-button"
+								href="https://www.linkedin.com/in/juliamaribernaus/" target="_blank"
+								role="button">Connect
+								on LinkedIn</a></li>
+					</ul>
+				</div>
 			</div>
-		</div><!--end home-about-->
-	</main>	
+		</div>
+		<!--end of contact-->
 
-<!-- Footer  -->
-<footer>
-
-	<!--Contact-->
-	<div class="container-contact" id="contact">
-		<div class="contact-wrapper">
-			<h3>Did you like my work?</h3>
-			<div class="contact-buttons-table">
-				<ul id="contact-buttons-list">
-					<li><a class="btn btn-primary contact-button" href="mailto:hi@juliamaribernaus.com" target="_blank"
-							role="button">Shoot me an email</a></li>
-					<li><a class="btn btn-secondary contact-button" href="https://www.linkedin.com/in/juliamaribernaus/"
-							target="_blank" role="button">Connect
-							on LinkedIn</a></li>
+		<div class="footer">
+			<div class="footer-table">
+				<ul id="footer-list">
+					<li>
+						<h6>©2021 All rights reserved</h6>
+					</li>
+					<li><a href="imprint.html" target="_blank">
+							<h6>Imprint</h6>
+						</a></li>
 				</ul>
 			</div>
 		</div>
-	</div>
-	<!--end of contact-->
-
-	<div class="footer">
-		<div class="footer-table">
-			<ul id="footer-list">
-				<li>
-					<h6>©2021 All rights reserved</h6>
-				</li>
-				<li><a href="../portfolio/imprint.html" target="_blank">
-						<h6>Imprint</h6>
-					</a></li>
-			</ul>
-		</div>
-	</div>
-</footer>
-<!--end of footer-->
+	</footer>
+	<!--end of footer-->
 </body>
+
 </html>
