--- a/setting.html
+++ b/setting.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Júlia Marí Bernaus">
-    <link href="../portfolio/img/favicon.ico" rel="shortcut icon">
+    <link href="img/favicon.ico" rel="shortcut icon">
     <title>Júlia Marí Bernaus | UX/UI Designer | Berlin</title>
 
     <!-- Bootstrap core CSS -->
@@ -14,8 +14,8 @@
         integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
 
     <!-- Custom styles for this template go here -->
-    <link rel="stylesheet" href="../portfolio/css/normalize.css#">
-    <link rel="stylesheet" href="../portfolio/css/styles.css">
+    <link rel="stylesheet" href="css/normalize.css#">
+    <link rel="stylesheet" href="css/styles.css">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -29,12 +29,12 @@
     <!-- Header/Navigation -->
     <header>
         <div class="main-nav">
-            <a class="logo" href="../portfolio/index.html">Júlia Mari Bernaus</a>
+            <a class="logo" href="index.html">Júlia Mari Bernaus</a>
             <nav>
                 <ul>
-                    <li><a class="top-nav" href="../portfolio/index.html#work">Work</a></li>
-                    <li><a class="top-nav" href="../portfolio/index.html#about">About</a></li>
-                    <li><a class="top-nav" href="../portfolio/index.html#contact">Contact</a></li>
+                    <li><a class="top-nav" href="index.html#work">Work</a></li>
+                    <li><a class="top-nav" href="index.html#about">About</a></li>
+                    <li><a class="top-nav" href="index.html#contact">Contact</a></li>
                     <li><a class="top-nav" href="https://www.linkedin.com/in/juliamaribernaus/"
                             target="_blank">LinkedIn</a></li>
                     <li><a class="btn-nav btn-outline-secondary" href="mailto:hi@juliamaribernaus.com" target="_blank"
@@ -103,7 +103,7 @@
                 </div><!--End Challenge Header-->
         </section><!--End The Challenge-->
         <picture><!--Open Hero Image-->
-            <source srcset="img/setting/setting_mobile.png" media="(max-width:767px)"><img src="../portfolio/img/setting/setting_desktop.png" alt="Setting Design by Júlia Marí Bernaus">
+            <source srcset="img/setting/setting_mobile.png" media="(max-width:767px)"><img src="img/setting/setting_desktop.png" alt="Setting Design by Júlia Marí Bernaus">
         </picture><!--End Hero Image-->
         <section><!--Open Project Description-->
             <div><!--Open Left Column-->
