CSS improvements on projects on index

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 						<a href="linsenpate.html">
 							<h2>Der Linsenpate</h2>
 							<h4>MisterSpex’s spin-off contactlenses e-commerce shop.</h4>
-							<label-big>2021</label-big>
+							<p class="label-big">2021</p>
 							<p class="label-role">UI Designer</p>
 						</a>
 					</div><!--end Project Content-->
@@ -104,7 +104,7 @@
 						<a href="setting.html">
 							<h2>Setting</h2>
 							<h4>Setting is an online marketplace for offices in Berlin.</h4>
-							<label-big>2020-2021</label-big>
+							<p class="label-big">2020-2021</p>
 							<p class="label-role">UX/UI Designer</p>
 						</a>
 					</div><!--end Project Content 2-->
@@ -120,7 +120,7 @@
 						<a href="shore.html">
 							<h2>Shore</h2>
 							<h4>App case study for non-professional watersports aficionados.</h4>
-							<label-big>2020</label-big>
+							<p class="label-big">2020</p>
 							<p class="label-role">UX/UI Designer</p>
 						</a>
 					</div><!--end Project Content 3-->
@@ -136,7 +136,7 @@
 						<a href="shore.html">
 							<h2>Artconnect</h2>
 							<h4>Artconnect is a global social network for creatives.</h4>
-							<label-big>2011-2020</label-big>
+							<p class="label-big">2011-2020</p>
 							<p class="label-role">Founder, Product Manager, UX/UI Design</p>
 						</a>
 					</div><!--end Project Content 4-->
