--- a/setting.html
+++ b/setting.html
@@ -178,42 +178,29 @@
             </div>
         </section><!--End of Design System Prototype-->
     </main>
-
-    <!-- Footer  -->
-    <footer>
-
-        <!--Contact-->
-        <div class="container-contact" id="contact">
-            <div class="contact-wrapper">
-                <h3>Did you like my work?</h3>
-                <div class="contact-buttons-table">
-                    <ul id="contact-buttons-list">
-                        <li><a class="btn btn-primary contact-button" href="mailto:hi@juliamaribernaus.com"
-                                target="_blank" role="button">Shoot me an email</a></li>
-                        <li><a class="btn btn-secondary contact-button"
-                                href="https://www.linkedin.com/in/juliamaribernaus/" target="_blank"
-                                role="button">Connect
-                                on LinkedIn</a></li>
-                    </ul>
-                </div>
-            </div>
+<footer>
+    <section id="contact">
+        <!--Open Contact-->
+        <h3>Did you like my work?</h3>
+        <div class="contact-button-wrapper">
+            <a class="btn btn-primary contact-button left" href="mailto:hi@juliamaribernaus.com" target="_blank"
+                role="button">Shoot me an email</a>
+            <a class="btn btn-secondary contact-button right" href="https://www.linkedin.com/in/juliamaribernaus/"
+                target="_blank" role="button">Connect on LinkedIn</a>
         </div>
-        <!--end of contact-->
+    </section>
+    <!--end of contact-->
 
-        <div class="footer">
-            <div class="footer-table">
-                <ul id="footer-list">
-                    <li>
-                        <h6>©2021 All rights reserved</h6>
-                    </li>
-                    <li><a href="../portfolio/imprint.html" target="_blank">
-                            <h6>Imprint</h6>
-                        </a></li>
-                </ul>
-            </div>
-        </div>
-    </footer>
-    <!--end of footer-->
+    <div class="imprint">
+        <!--Open Imprint-->
+        <h6>©2021 All rights reserved</h6>
+        <a href="imprint.html" target="_blank">
+            <h6>Imprint</h6>
+        </a>
+    </div>
+    <!--End Imprint-->
+</footer>
+<!--end of footer-->
 </body>
 
 </html>
