CSS Layout improvements on Linsenpate

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 
 		<!-- Projects -->
-		<section class="container-work" id="work"><!--Menu Link to Work goes here-->
+		<section class="work-wrapper" id="work"><!--Menu Link to Work goes here-->
 			<div>
 				<h3>Selected Projects</h3>
 			</div>
