CSS layout on Setting Page

--- a/linsenpate.html
+++ b/linsenpate.html
@@ -106,12 +106,9 @@
                                         <p>Introduce Italian in a German website, so that it’s understood and yet feels authentic?</p>
                                     </li>
                                 </ul>
-                            </div>
-                            <!--Close Challenge Numbers-->
-                        </div>
-                        <!--End Challenge Header-->
-                    </section>
-                    <!--End The Challenge-->
+                            </div><!--Close Challenge Numbers-->
+                        </div><!--End Challenge Header-->
+                    </section><!--End The Challenge-->
 
         <div class="lp-hero">
             <picture><!--Open Hero Image-->
@@ -122,8 +119,7 @@
 
         <section id="prj-description" class="prj-flex-grid container">
             <!--Open Project Description-->
-            <div class="prj-left-col">
-                <!--Open Left Column-->
+            <div class="prj-left-col"><!--Open Left Column-->
                 <div>
                     <h3>About Der Linsenpate</h3>
                     <p>Linsenpate is a German e-commerce website for contact lenses and related products. It stands out for its name and story
